# gmail-cleaner

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  gmail_cleaner.py  gmail_cleaner_old.py  index.html  junk_patterns.json  junk_senders.txt  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: cleaner.py  collector.py  gmail_service.py  gmail_service.py.bak  main.py  models.py
app/static/: app.js  index.html
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/components/: ActionButtons.svelte  AuthSection.svelte  DomainItem.svelte  DomainSection.svelte  FilterOptions.svelte  Header.svelte  ProgressSection.svelte  ResultsSection.svelte
frontend/src/lib/gmail/: api.js  auth.js
frontend/src/lib/gmail/__tests__/: collector.test.js
frontend/src/lib/stores/: appState.js  websocket.js
gmail_cleaner/: headers.py  main.py  objects.py  utils.py
src/: App.svelte  app.css
src/lib/: asyncPool.js  constants.js  errors.js
src/lib/__tests__/: asyncPool.test.js
src/lib/components/: ActionButtons.svelte  AuthSection.svelte  DomainExcludeInput.svelte  DomainItem.svelte  DomainSection.svelte  FilterOptions.svelte  LabelSelector.svelte  ProgressSection.svelte  ResultsSection.svelte
src/lib/gmail/: auth.js  cleaner.js  collector.js  progressHandler.js  progressPoller.js
src/lib/gmail/__tests__/: cleaner.test.js  collector.test.js  testUtils.js
src/lib/models/: index.js
src/lib/stores/: cleanupStore.js  collectionStore.js  filterStore.js  progressStore.js  resultsStore.js  uiStore.js
tests/: conftest.py  test_cleaner.py  test_collector.py  test_gmail_cleaner.py
