[tool.pyright]
exclude = [
  ".venv"
]
venvPath = "."
venv = ".venv"
reportUnusedCallResult = false
reportUnknownMemberType = false

[project]
name = "gmail-cleaner"
version = "0.1.0"
description = "Pattern-based Gmail inbox cleaner (no AI required)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.127.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
