[tool.pyright]
exclude = [
  ".venv"
]
venvPath = "."
venv = ".venv"
reportUnusedCallResult = false
reportUnknownMemberType = false

[project]
name = "gmail-cleaner"
version = "0.1.0"
description = "Gmail inbox cleaner with web interface"
requires-python = ">=3.9"
license = "MIT"
keywords = ["gmail", "email", "cleanup", "inbox", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Communications :: Email",
]
dependencies = [
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.127.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "ipdb>=0.13.13",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/brianleungwh/gmail-cleaner"
Repository = "https://github.com/brianleungwh/gmail-cleaner"
Issues = "https://github.com/brianleungwh/gmail-cleaner/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
